met/met-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: met-pod
spec:
  containers:
  - name: met-nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: met-configmap
      mountPath: /etc/nginx/conf.d
      readOnly: true
  volumes:
  - name: met-configmap
    configMap:
      name: met-configmap
