met/met-endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: met-endpoints
subsets:
  - addresses:
      - ip: 10.1.65.220
    ports:
      - port: 8069
