met/met-svc-endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: met-svc-endpoints
subsets:
  - addresses:
      - ip: 10.152.183.136
    ports:
      - port: 8069
