met/met-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: met-ing
  annotations:
    cert-manager.io/cluster-issuer: "met-clusterissuer"
    spec.ingressClassName: "public"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - metamorfose.blog.br
    secretName: met-secret
  rules:
  - host: metamorfose.blog.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: met-svc
            port:
              number: 8081
